Player and enemy sprite

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ GAME3001_A3_Daekoen_Lee_Michale_Shular/.vs/Template/v16/.suo
 GAME3001_A3_Daekoen_Lee_Michale_Shular/.vs/Template/v16/Browse.VC.db
 
 GAME3001_A3_Daekoen_Lee_Michale_Shular/.vs/Template/v16/Browse.VC.db-shm
+
+GAME3001_A3_Daekoen_Lee_Michale_Shular/.vs/Template/v16/Browse.VC.opendb
